--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "test-me",
     "start": "node index.js",
-    "dev":"nodemon index.js"
+    "dev": "node launch.js" 
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
+    "open": "^10.1.0",
     "uuid": "^11.0.3"
   }
 }
