--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Practice project",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "uuid": "^11.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.9",
+    "ts-node": "^1.7.1",
+    "typescript": "^5.9.3"
   }
 }
